# vantage

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
src/vantage/: __init__.py
src/vantage/adapters/: __init__.py
src/vantage/adapters/sqlite/: __init__.py  engine.py  event_sink.py  repository.py  tables.py
src/vantage/adapters/sqlite/migrations/: env.py
src/vantage/adapters/sqlite/migrations/versions/: 0001_initial.py  0002_rich_test_metadata.py
src/vantage/core/: __init__.py
src/vantage/core/domain/: __init__.py  events.py  models.py
src/vantage/core/ingestion/: __init__.py  sink.py
src/vantage/core/storage/: __init__.py  repository.py
tests/integration/: test_sqlite_alembic_migrations.py  test_sqlite_engine_wal.py  test_sqlite_event_sink.py  test_sqlite_repository.py  test_sqlite_schema.py
tests/unit/: test_domain_models.py  test_event_envelope.py  test_event_sink_protocol.py  test_package.py  test_repository_protocols.py
